Thu Feb  4 15:21:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/PortStatusListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/Utils.h:
          Resolved runtime issues regarding logging an instance_handle

Thu Feb  4 14:09:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/ComponentAttributesSetter.cpp:
          Cleanup and log which attribute is causing the exception

Thu Feb  4 13:21:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Utils.h:
        * connectors/dds4ccm/impl/ndds/Utils.cpp:
          Resolved compiler issues on windows.

Thu Feb  4 12:42:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
          Resolved compiler errors.

Thu Feb  4 12:37:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.h:
        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.cpp:
          Resolved compiler errors.

Thu Feb  4 12:31:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.h:
        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.cpp:
        * connectors/dds4ccm/impl/ndds/PortStatusListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/TopicListener_T.cpp:
          Added status logging for each DDS callback. Also implemented
          thread switch.

Thu Feb  4 11:45:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
          Corrected mask and according methods.

Thu Feb  4 10:46:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>
